@@ -29,6 +29,7 @@ Version 1.0.10 (March xxth 2013)
 - Implemented: Adjustment value for temperature sensors
 - Implemented: multiply value for rain sensors
 - Implemented: Scenes
+- Implemented: Motion Sensor Off Delay
 
 Version 1.0.9 (February 17th 2013)
 - Implemented: OWL113 option to display in Ampere/Usage
